if is selected, not selected again TagField